--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikewatching</title>
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="global.css">
+  <!-- Mapbox GL JS CSS -->
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
 </head>
 <body>
   <h1>🚴🏼‍♀️ Bikewatching</h1>
   <p>An interactive map visualizing bike traffic in the Boston area during different times of the day</p>
+  <div id="map"></div>
+  <!-- Mapbox GL JS JavaScript -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <!-- Load your custom map initialization script -->
+  <script src="map.js"></script>
 </body>
 </html>
