--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>🚴🏼‍♀️ Bikewatching</h1>
+  <header>
+    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <label for="time-slider">
+      Filter by time:
+      <input type="range" id="time-slider" min="-1" max="1440" value="-1" step="1">
+      <time id="selected-time">11:59</time>
+      <em id="any-time">(Any time)</em>
+    </label>
+  </header>
   <p>An interactive map visualizing bike traffic in the Boston area during different times of the day</p>
-  <div id="map"></div>
+  <div id="map">
+    <svg></svg>
+  </div>
+
+
+  <!-- Load D3.js from CDN -->
+  <script src="https://d3js.org/d3.v7.min.js"></script> 
   <!-- Mapbox GL JS JavaScript -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <!-- Load your custom map initialization script -->
