--- a/index.html
+++ b/index.html
@@ -12,16 +12,26 @@
 <body>
   <header>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
-    <label for="time-slider">
-      Filter by time:
-      <input type="range" id="time-slider" min="-1" max="1440" value="-1" step="1">
-      <time id="selected-time">11:59</time>
-      <em id="any-time">(Any time)</em>
-    </label>
+    <div class="header-right">
+      <span>Filter by Time: </span>
+      <label>
+          <input type="range" id="time-slider" min="-1" max="1439" value="-1">
+          <span id="time-display">
+              <em id="any-time">(any time)</em> 
+              <time id="selected-time"></time>
+          </span>
+      </label>
+  </div>
   </header>
   <p>An interactive map visualizing bike traffic in the Boston area during different times of the day</p>
   <div id="map">
     <svg></svg>
+  </div>
+  <div class="legend">
+    <span>LEGEND:</span>
+    <div style="--departure-ratio: 1">More departures</div>
+    <div style="--departure-ratio: 0.5">Balanced</div>
+    <div style="--departure-ratio: 0">More arrivals</div>
   </div>
 
 
